# unixdomainsocket_ipc

./: CMakeLists.txt  README.md
src/client/: CMakeLists.txt  main.cpp
src/common/: EpollWrapper.cpp  EpollWrapper.h  FileDescriptorTool.cpp  FileDescriptorTool.h  MessageDefine.hpp  SocketWrapper.cpp  SocketWrapper.h  StringTool.cpp  StringTool.h  mutex.hpp
src/lib/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  UnixDomainSocketClient.cpp  UnixDomainSocketClient.h  UnixDomainSocketCore.cpp  UnixDomainSocketCore.h  UnixDomainSocketExport.cpp  UnixDomainSocketFactoryBase.h  UnixDomainSocketServer.cpp  UnixDomainSocketServer.h
src/server/: CMakeLists.txt  main.cpp
